--- a/css/index.css
+++ b/css/index.css
@@ -470,6 +470,12 @@ img{vertical-align:middle;}
     padding-bottom: 40px;
     border-bottom: 1px solid #c79744;
 }
+.action_fin{
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    padding-bottom: 40px;
+}
 .action_itmes{
     width: 100%;
     overflow: hidden;
@@ -554,6 +560,7 @@ img{vertical-align:middle;}
     padding-left: 20px;
     box-sizing: border-box;
     margin-top: 20px;
+    overflow: hidden;
 }
 .contact_mess p{
     line-height: 30px;
@@ -599,12 +606,9 @@ img{vertical-align:middle;}
     border-radius: 0 0 5% 5%;
 }
 .contact_mess>div:first-of-type{
-    width: 60px;
+    width: 90px;
     text-align: right;
     float: left;
-}
-.contact_mess>div:last-of-type{
-    /*float: right;*/
 }
 .pro{
     color: #c79744;
@@ -612,4 +616,190 @@ img{vertical-align:middle;}
 .pro_active{
     color: black;
 }
+.tijiao{
+    float: left;
+    width: 120px;
+    height: 40px;
+    margin-top: 20px;
+    background: #c79744;
+    color: white;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+.fanhui{
+    float: left;
+    width: 120px;
+    height: 40px;
+    margin-top: 20px;
+    color: white;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    margin-left: 10px;
+}
 /*contact end*/
+
+/*contributions sta*/
+.contri_content{
+    margin-top: 40px;
+}
+.next{
+    display: block;
+    width: 100px;
+    height: 40px;
+    background: #cccccc;
+    color: #eee;
+    margin-top: 40px;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 40px;
+}
+.ju_left {
+    width: 60%;
+    float: left;
+}
+.contri_mess{
+    width: 100%;
+}
+.contact_mess li{
+    width: 100%;
+    float: left;
+}
+.jump_right{
+    width: 40%;
+    float: right;
+}
+.radios{
+    margin-right: 5px;
+}
+.contact_mess input{
+    height: 20px;
+}
+.money{
+    width: 80%;
+    float: left;
+}
+.money>span{
+    display: block;
+    width: 80px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    float: left;
+    margin-left: 10px;
+    border: 1px solid #eee;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    position: relative;
+}
+.money>span:hover{
+    border: 1px solid #c79744;
+}
+.money_active{
+    width: 0;
+    height: 0;
+    border-bottom: 10px solid #c79744;
+    border-left: 10px solid transparent;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
+.money .money_active_line{
+    border: 1px solid #c79744;
+}
+.pu_action{
+    width: 70%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #eee;
+    overflow: hidden;
+}
+.pu_content{
+    overflow: hidden;
+}
+.pu_heard{
+    border-bottom: 1px solid #eee;
+}
+.pu_content{
+    margin-top: 10px;
+}
+.pu_img{
+    float: left;
+    width: 30%px;
+}
+.pu_title{
+    width: 65%;
+    float: right;
+}
+.pu_name{
+    width: 100%;
+    overflow: hidden;
+}
+.pu_tit{
+    float: left;
+}
+.pu_date{
+    float: right;
+}
+.pu_me{
+    height: 40px;
+    color: #666;
+    margin-top: 20px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+/*contributions end*/
+
+/*succ sta*/
+.succ{
+    margin-top: 40px;
+    border: 1px solid #eee;
+}
+.succ>h2{
+    font-size: 40px;
+    font-weight: 500;
+    text-align: center;
+    line-height: 80px;
+}
+.succ>p{
+    text-align: center;
+    background: #eee;
+    line-height: 30px;
+}
+.succ>p>span{
+    color: #c79744;
+    cursor: pointer;
+}
+.succ>p:last-of-type{
+    margin: 50px 0;
+    background: none;
+}
+.youcan{
+    margin-top: 40px;
+    overflow: hidden;
+    line-height: 50px;
+    text-align: center;
+}
+.youcan>a{
+    display: inline-block;
+    width: 200px;
+    color: white;
+}
+.youcan>a:nth-of-type(2){
+    background: #c79744;
+    border-radius: 5px;
+}
+.youcan>a:nth-of-type(3){
+    background: #999;
+    border-radius: 5px;
+}
+.youcan>a:first-of-type,.youcan>a:last-of-type{
+    color: black;
+}
+/*succ end*/
